# habr-test-erase

./: CMakeLists.txt  Object.cpp  Object.hpp  main.cpp
